compiler-executable/iris-progress/src/snapshots/iris_progress__tests__compilation_frame_light_true_color_ansi.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---
"\u{1b}[9;1H\u{1b}[38;2;80;87;110;49mshort                                    9.50 ms\u{1b}[10;1H\u{1b}[38;2;76;83;107;49ma�very-long-package-name               123.45 ms\u{1b}[11;1H\u{1b}[39;49m────────────────────────────────────────────────\u{1b}[12;1H[\u{1b}[38;2;156;83;88;49m⣿\u{1b}[38;2;157;85;90;49m⣿\u{1b}[38;2;157;85;92;49m⣿\u{1b}[38;2;137;75;83;49m⣿\u{1b}[38;2;114;63;70;49m⣿\u{1b}[38;2;88;49;55;49m⣿\u{1b}[38;2;115;65;73;49m⣿\u{1b}[38;2;139;79;90;49m⣇\u{1b}[1m\u{1b}[38;2;76;83;107;49m⠀\u{1b}[22m\u{1b}[38;2;220;223;231;49m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\u{1b}[39;49m]\u{1b}[13;1H\u{1b}[38;2;76;83;107;49mCompiling 2 of 12 packages in 2.34s\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
