compiler-executable/iris-progress/src/snapshots/iris_progress__tests__compilation_frame_plain.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---








short                                    9.50 ms
a�very-long-package-name               123.45 ms
────────────────────────────────────────────────
[=======>--------------------------------------]
Compiling 2 of 12 packages in 2.34s
