compiler-executable/iris-progress/src/snapshots/iris_progress__tests__finalization_frame_true_color_ansi.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---
"\u{1b}[9;1H\u{1b}[38;2;211;203;195;49mshort                                    9.50 ms\u{1b}[10;1H\u{1b}[38;2;230;220;210;49ma�very-long-package-name               123.45 ms\u{1b}[11;1H\u{1b}[39;49m────────────────────────────────────────────────\u{1b}[12;1H[\u{1b}[38;2;240;128;136;49m⣿\u{1b}[38;2;241;130;139;49m⣿\u{1b}[38;2;241;131;142;49m⣿\u{1b}[38;2;245;164;173;49m⣿\u{1b}[38;2;249;201;207;49m⣿\u{1b}[38;2;254;241;243;49m⣿\u{1b}[38;2;250;202;210;49m⣿\u{1b}[38;2;247;168;182;49m⣇\u{1b}[1m\u{1b}[38;2;230;220;210;49m⠀\u{1b}[22m\u{1b}[38;2;54;60;67;49m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\u{1b}[39;49m]\u{1b}[13;1H\u{1b}[38;2;230;220;210;49mFinished 2 of 12 packages in 2.89s\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
