compiler-executable/iris-progress/src/snapshots/iris_progress__tests__finished_frame_matching_dark_true_color_ansi.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---
"\u{1b}[9;1H\u{1b}[38;2;254;243;244;49mshort                                    9.50 ms\u{1b}[10;1H\u{1b}[38;2;255;255;255;49ma�very-long-package-name               123.45 ms\u{1b}[11;1H\u{1b}[39;49m────────────────────────────────────────────────\u{1b}[12;1H[\u{1b}[38;2;120;64;68;49m⣿\u{1b}[38;2;121;65;70;49m⣿\u{1b}[38;2;121;66;71;49m⣿\u{1b}[38;2;121;67;73;49m⣿\u{1b}[38;2;106;59;65;49m⣿\u{1b}[38;2;106;60;67;49m⣿\u{1b}[38;2;106;60;68;49m⣿\u{1b}[38;2;107;61;69;49m⣇\u{1b}[1m\u{1b}[38;2;255;255;255;49m⠀\u{1b}[22m\u{1b}[38;2;242;148;155;49m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\u{1b}[39;49m]\u{1b}[13;1H\u{1b}[38;2;255;255;255;49mFinished 2 of 12 packages in 3.21s\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
