compiler-executable/iris-progress/src/snapshots/iris_progress__tests__finished_frame_midtone_light_true_color_ansi.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---
"\u{1b}[9;1H\u{1b}[38;2;3;1;1;49mshort                                    9.50 ms\u{1b}[10;1H\u{1b}[38;2;0;0;0;49ma�very-long-package-name               123.45 ms\u{1b}[11;1H\u{1b}[39;49m────────────────────────────────────────────────\u{1b}[12;1H[\u{1b}[38;2;39;21;22;49m⣿\u{1b}[38;2;39;21;23;49m⣿⣿\u{1b}[38;2;39;22;24;49m⣿⣿\u{1b}[38;2;40;22;25;49m⣿\u{1b}[38;2;40;23;25;49m⣿\u{1b}[38;2;40;23;26;49m⣇\u{1b}[1m\u{1b}[38;2;0;0;0;49m⠀\u{1b}[22m\u{1b}[38;2;131;70;74;49m⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀\u{1b}[39;49m]\u{1b}[13;1H\u{1b}[38;2;0;0;0;49mFinished 2 of 12 packages in 3.21s\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
