compiler-executable/iris-progress/src/snapshots/iris_progress__tests__finished_frame_plain.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---








short                                    9.50 ms
a�very-long-package-name               123.45 ms
────────────────────────────────────────────────
[=======>--------------------------------------]
Finished 2 of 12 packages in 3.21s
