compiler-executable/iris-progress/src/snapshots/iris_progress__tests__history_near_threshold_light_true_color_ansi.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---
"\u{1b}[1;1H\u{1b}[38;2;118;118;118;49mprelude                                  1.00 ms\u{1b}[2;1Heffect                                   1.00 ms\u{1b}[3;1Hconsole                                  1.00 ms\u{1b}[4;1Harrays                                   1.00 ms\u{1b}[5;1Hstrings                                  1.00 ms\u{1b}[6;1Hmaybe                                    1.00 ms\u{1b}[7;1Heither                                   1.00 ms\u{1b}[8;1Hcontrol                                  1.00 ms\u{1b}[9;1Haff                                      1.00 ms\u{1b}[10;1H\u{1b}[38;2;117;117;117;49mapplication                              1.00 ms\u{1b}[11;1H\u{1b}[39;49m────────────────────────────────────────────────\u{1b}[12;1H[\u{1b}[38;2;156;83;88;49m⣿\u{1b}[38;2;157;85;90;49m⣿\u{1b}[38;2;157;85;92;49m⣿\u{1b}[38;2;157;86;95;49m⣿\u{1b}[38;2;157;87;97;49m⣿\u{1b}[38;2;158;88;99;49m⣿\u{1b}[38;2;158;90;101;49m⣿\u{1b}[38;2;159;90;103;49m⣿\u{1b}[38;2;159;92;105;49m⣿\u{1b}[38;2;159;92;107;49m⣿\u{1b}[38;2;159;94;109;49m⣿\u{1b}[38;2;160;95;111;49m⣿\u{1b}[38;2;160;96;113;49m⣿\u{1b}[38;2;161;97;116;49m⣿\u{1b}[38;2;161;98;118;49m⣿\u{1b}[38;2;161;99;120;49m⣿\u{1b}[38;2;159;98;122;49m⣿\u{1b}[38;2;155;98;123;49m⣿\u{1b}[38;2;153;97;125;49m⣿\u{1b}[38;2;150;96;127;49m⣿\u{1b}[38;2;148;96;128;49m⣿\u{1b}[38;2;144;95;130;49m⣿\u{1b}[38;2;142;94;132;49m⣿\u{1b}[38;2;139;93;133;49m⣿\u{1b}[38;2;137;92;135;49m⣿\u{1b}[38;2;133;92;137;49m⣿\u{1b}[38;2;131;91;138;49m⣿\u{1b}[38;2;112;79;123;49m⣿\u{1b}[38;2;91;65;103;49m⣿\u{1b}[38;2;68;50;81;49m⣿\u{1b}[38;2;87;64;106;49m⣿\u{1b}[38;2;103;75;126;49m⣿\u{1b}[38;2;116;83;143;49m⣿\u{1b}[38;2;113;80;142;49m⣿\u{1b}[38;2;111;77;140;49m⣿\u{1b}[38;2;109;75;138;49m⣿\u{1b}[38;2;107;72;137;49m⣿\u{1b}[38;2;105;69;136;49m⣿\u{1b}[38;2;103;66;135;49m⣿\u{1b}[38;2;101;64;133;49m⣿\u{1b}[38;2;99;60;132;49m⣿\u{1b}[38;2;97;58;131;49m⣿\u{1b}[38;2;95;55;129;49m⣿\u{1b}[38;2;92;53;127;49m⣿\u{1b}[38;2;90;49;126;49m⣿\u{1b}[38;2;88;47;125;49m⣿\u{1b}[39;49m]\u{1b}[13;1H\u{1b}[38;2;117;117;117;49mCompiling 10 of 10 packages in 2.34s\u{1b}[39m\u{1b}[49m\u{1b}[59m\u{1b}[0m"
