compiler-executable/iris-progress/src/snapshots/iris_progress__tests__narrow_frame_plain.snap
---
source: compiler-executable/iris-progress/src/tests.rs
---


[==>-------------]
Compiling 2 of 12…
